apps/roundcube/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: plugins
          persistentVolumeClaim:
            claimName: plugins
        - name: html
          emptyDir: {}
      containers:
        - name: app
          image: docker.io/roundcube/roundcubemail:1.7.x-apache-nonroot@sha256:533b48d35f8fef99f24ae6997a032a727888d6992bd55a1a0a24d1ea208dbf3f
          envFrom: []
          volumeMounts:
            - name: config
              mountPath: /var/roundcube
            - name: html
              mountPath: /var/www/html
            - name: plugins
              mountPath: /var/www/html/plugins
          resources:
            requests:
              memory: 128M
            limits:
              memory: 256M
          ports:
            - name: http
              containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels: &labels
    app.kubernetes.io/component: app
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    tailscale.com/proxy-group: ingress-proxy-group
    tailscale.com/tags: tag:k8s,tag:apps
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts: [roundcube]
